--- a/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
+++ b/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
@@ -119,7 +119,7 @@ body{
 			position:relative;
 			z-index:996;
 			background:#eee;
-			//min-height:100vh;
+			min-height:100vh;
 			.wrapper{
 				display:block;
 				margin:auto;
