change a3 bg color to match footer

--- a/themes/unc_charlotte4/css/unc_charlotte4.styles.css
+++ b/themes/unc_charlotte4/css/unc_charlotte4.styles.css
@@ -165,7 +165,7 @@ body {
   body.front #a3 {
     position: relative;
     z-index: 996;
-    background: #eee;
+    background: #E8E8E4;
     min-height: 100vh; }
     body.front #a3 .wrapper {
       display: block;
