--- a/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
+++ b/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
@@ -118,7 +118,8 @@ body{
 		#a3{
 			position:relative;
 			z-index:996;
-			background:#eee;
+			//background:#eee;
+			background: #E8E8E4;
 			min-height:100vh;
 			.wrapper{
 				display:block;
