--- a/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
+++ b/themes/unc_charlotte4/sass/unc_charlotte4.styles.scss
@@ -1771,6 +1771,11 @@ html #block-views-basic-page-featured-block{
 			width: 500px;
 		}
 	}
+	.field-collection-item-field-subsection {
+		a {
+			pointer-events: none;
+		}
+	}
 }
 #block-bean-join-faqs{
 	@include floatblock();
