--- a/themes/unc_charlotte4/sass/base/_typography.scss
+++ b/themes/unc_charlotte4/sass/base/_typography.scss
@@ -32,6 +32,7 @@ p{
 	margin:10px 0;
 }
 a {
+	color: #006633;
 	text-decoration: none;
-	a:hover { text-decoration: underline; }
+	&:hover { text-decoration: underline; }
 }
